# linear-regression-from-scratch-cpp

./: CMakeLists.txt  README.md  build.bat
data/: testing.csv
include/linear-regression-from-scratch-cpp/: DataLoader.h
include/linear-regression-from-scratch-cpp/DataLoader/: DataLoader.h
include/linear-regression-from-scratch-cpp/Model/: LinearRegression.h
include/linear-regression-from-scratch-cpp/Optimizer/: GradientDescent.h
src/: main.cpp
src/DataLoader/: DataLoader.cpp
src/Model/: LinearRegression.cpp
src/Optimizer/: GradientDescent.cpp
tests/: CMakeLists.txt  DataLoader_unittest.cpp  autotest.bat  test.cpp
